--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="position: relative">
 	<hr />
 	<footer>
 		<div class="row" style="align-content: center">
