--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -17,18 +17,14 @@
 	<link href="bootstrap/css/bootstrap.css" type="text/css"
 		rel="stylesheet" />
 	<link href="css/default.css" type="text/css" rel="stylesheet" />
-	<link href="css/collage/transitions.css" type="text/css"
-		rel="stylesheet" />
-	<link href="css/collage/collage.css" type="text/css" rel="stylesheet" />
+
+	<link href="css/slider.css" type="text/css" rel="stylesheet" />
 	<link href="js/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css"
 		rel="stylesheet" media="screen" />
+
+	<script src="js/jssor.slider.min.js" type="text/javascript"></script>
 	<script src="js/jquery-1.11.3.js" type="text/javascript"></script>
 	<script src="bootstrap/js/bootstrap.js" type="text/javascript"></script>
-	<script src="js/collage/jquery.collagePlus.js" type="text/javascript" />
-	<script src="js/collage/extras/jquery.collageCaption.js"
-		type="text/javascript" />
-	<script src="js/collage/extras/jquery.removeWhitespace.js"
-		type="text/javascript" />
 	<script src="js/fancybox/jquery.fancybox.js?v=2.1.5"
 		type="text/javascript" />
 </h:head>
@@ -50,61 +46,153 @@
 			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 			culpa qui officia deserunt mollit anim id est laborum.</p>
 		<hr />
-		<div class="row">
-			<div id="box" class="box">
-				<div id="portfolio" class="container">
-					<div class="Collage effect-parent">
-						<ui:repeat value="#{specimenContentBean.contentSpecimen}"
-							var="scon">
-							<div class="Image_Wrapper"
-								data-caption="#{scon.shortDescription}">
-								<h:outputLink value="specimenDetail.xhtml"
-									styleClass="fancybox fancybox.iframe"
-									title="#{scon.idSpecimen.commonName}">
-									<f:param name="idSpecimen"
-										value="#{scon.idSpecimen.idSpecimen}" />
-									<p:graphicImage
-										value="#{specimenContentBean.getSpecimenThumb()}">
-										<f:param name="t" value="#{specimenContentBean.timeStamp}" />
+		<div id="mainSlider">
+			<div data-u="loading" class="loadSpin">
+				<img src="images/svg/loading/static-svg/spin.svg" />
+			</div>
+			<div data-u="slides" class="slides">
+				<ui:repeat id="forContent"
+					value="#{specimenContentBean.contentSpecimen}" var="scon">
+					<div>
+						<div class="specimenSlide" data-u="image">
+							<div class="row">
+								<div class="col-md-6">
+									<h:outputLink value="detailedPicture.xhtml"
+										styleClass="fancybox fancybox.iframe"
+										title="#{scon.idSpecimen.commonName}">
 										<f:param name="idSpecimen"
 											value="#{scon.idSpecimen.idSpecimen}" />
-									</p:graphicImage>
-								</h:outputLink>
+										<p:graphicImage class="img-responsive"
+											value="#{specimenContentBean.getSpecimenThumb()}">
+											<f:param name="t" value="#{specimenContentBean.timeStamp}" />
+											<f:param name="idSpecimen"
+												value="#{scon.idSpecimen.idSpecimen}" />
+										</p:graphicImage>
+									</h:outputLink>
+								</div>
+								<div class="col-md-6">
+									<div class="btn-group btn-group-justified" role="group">
+										<h:outputLink value="specimenDetail.xhtml"
+											styleClass="fancybox fancybox.iframe btn btn-default btn-lg btn-action"
+											title="Ficha técnica de #{scon.idSpecimen.commonName}">
+											<f:param name="idSpecimen"
+												value="#{scon.idSpecimen.idSpecimen}" />
+											<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+										</h:outputLink>
+										<a class="btn btn-default btn-lg btn-action"
+											title="Ubicar en el arbol taxonómico"> <span
+											class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+										</a>
+									</div>
+									<hr />
+								</div>
+								<p class="specimenText">#{scon.shortDescription}</p>
 							</div>
-						</ui:repeat>
+						</div>
+						<p:graphicImage id="specimenThumb"
+							class="specimenThumb img-responsive"
+							value="#{specimenContentBean.getSpecimenThumb()}">
+							<f:param name="t" value="#{specimenContentBean.timeStamp}" />
+							<f:param name="idSpecimen" value="#{scon.idSpecimen.idSpecimen}" />
+						</p:graphicImage>
+					</div>
+				</ui:repeat>
+			</div>
+
+			<div data-u="thumbnavigator" class="thumbNav" data-autocenter="1"
+				data-scale-bottom="0.75">
+				<div data-u="slides">
+					<div data-u="prototype" class="p">
+						<div data-u="thumbnailtemplate" class="t"></div>
+						<svg viewBox="0 0 16000 16000" class="cv">
+                        <circle class="a" cx="8000" cy="8000" r="3238.1"></circle>
+                        <line class="a" x1="6190.5" y1="8000"
+								x2="9809.5" y2="8000"></line>
+                        <line class="a" x1="8000" y1="9809.5" x2="8000"
+								y2="6190.5"></line>
+                    </svg>
 					</div>
 				</div>
 			</div>
+			<div data-u="arrowleft" class="navButtons left" data-scale="0.75">
+				<svg viewBox="0 0 16000 16000" class="viewBox">
+                <circle class="c" cx="8000" cy="8000" r="6260.9"></circle>
+                <polyline class="a"
+						points="7930.4,5495.7 5426.1,8000 7930.4,10504.3 "></polyline>
+                <line class="a" x1="10573.9" y1="8000" x2="5426.1"
+						y2="8000"></line>
+            </svg>
+			</div>
+			<div data-u="arrowright" class="navButtons right" data-scale="0.75">
+				<svg viewBox="0 0 16000 16000" class="viewBox">
+                <circle class="c" cx="8000" cy="8000" r="6260.9"></circle>
+                <polyline class="a"
+						points="8069.6,5495.7 10573.9,8000 8069.6,10504.3 "></polyline>
+                <line class="a" x1="5426.1" y1="8000" x2="10573.9"
+						y2="8000"></line>
+            </svg>
+			</div>
 		</div>
 	</div>
+
 	<ui:include src="footer.xhtml" />
 
 	<script type="text/javascript">
 		$(window).load(function() {
-			$(document).ready(function() {
-				collage();
-				$('.Collage').collageCaption();
-			});
 			$(".fancybox").fancybox({
 				"width" : "80%",
 				"height" : "70%"
 			});
-		});
 
-		function collage() {
-			$('.Collage').removeWhitespace().collagePlus({
-				'fadeSpeed' : 2000,
-				'targetHeight' : 200
+			$('.specimenThumb').each(function() {
+				$(this).attr('data-u', 'thumb');
 			});
-		}
 
-		var resizeTimer = null;
-		$(window).bind('resize', function() {
-			$('.Collage .Image_Wrapper').css("opacity", 0);
-			if (resizeTimer)
-				clearTimeout(resizeTimer);
-			resizeTimer = setTimeout(collage, 200);
+			specimenSliderInit();
+
+			$('.thumbNav').parent().css('z-index', '99');
 		});
+
+		specimenSliderInit = function() {
+			var sliderOptions = {
+				$AutoPlay : 1,
+				$SlideshowOptions : {
+					$Class : $JssorSlideshowRunner$
+				},
+				$ArrowNavigatorOptions : {
+					$Class : $JssorArrowNavigator$
+				},
+				$ThumbnailNavigatorOptions : {
+					$Class : $JssorThumbnailNavigator$,
+					$SpacingX : 5,
+					$SpacingY : 5
+				}
+			};
+
+			var specimenSlider = new $JssorSlider$("mainSlider", sliderOptions);
+			var MAX_WIDTH = 980;
+
+			function ScaleSlider() {
+				var containerElement = specimenSlider.$Elmt.parentNode;
+				var containerWidth = containerElement.clientWidth;
+
+				if (containerWidth) {
+
+					var expectedWidth = Math.min(MAX_WIDTH || containerWidth,
+							containerWidth);
+
+					specimenSlider.$ScaleWidth(expectedWidth);
+				} else {
+					window.setTimeout(ScaleSlider, 30);
+				}
+			}
+
+			ScaleSlider();
+
+			$Jssor$.$AddEvent(window, "load", ScaleSlider);
+			$Jssor$.$AddEvent(window, "resize", ScaleSlider);
+			$Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+		};
 	</script>
 </body>
 </html>
