--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-md-2">
 				<img class="img-responsive" style="margin: auto;"
-					src="images/utils/logo_colciencias.jpg" />
+					src="images/utils/bug-contour-dark.png" />
 			</div>
 			<div class="col-md-4">
 				<img class="img-responsive" style="margin: auto;"
