--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -38,13 +38,11 @@
 				<li class="active">Familia #{specimenContentBean.familyName}</li>
 			</ol>
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-			ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Duis aute irure dolor in
-			reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-			culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>
+			<h:outputText
+				value="#{navigationBean.getMessage('FAMILY_DETAIL_TEXT')}"
+				escape="false" />
+		</p>
 		<hr />
 		<div id="mainSlider">
 			<div data-u="loading" class="loadSpin">
