--- a/src/main/webapp/FamiliesCollection.xhtml
+++ b/src/main/webapp/FamiliesCollection.xhtml
@@ -41,13 +41,11 @@
 				<li class="active">Colección Entomológica</li>
 			</ol>
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-			ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Duis aute irure dolor in
-			reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-			culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>
+			<h:outputText
+				value="#{navigationBean.getMessage('FAMILIES_COLLECTION_TEXT')}"
+				escape="false" />
+		</p>
 		<hr />
 		<h:outputText value="&lt;div class=&quot;row&quot;&gt;" escape="false" />
 		<h:form id="formCollection">
@@ -75,7 +73,7 @@
 									<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
 								</p:commandLink>
 								<h:outputLink id="locateInTree" value="taxTree.xhtml"
-									styleClass="btn btn-default btn-lg btn-action"
+									styleClass="btn btn-default btn-lg btn-action locateInTree"
 									title="Ubicar en el arbol taxonómico">
 									<f:param name="idTaxonomy" value="#{fam.idTaxonomy}" />
 									<span class="locateInTreeText">Ubicar esta familia en
