--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -28,6 +28,10 @@
 </h:head>
 <h:outputScript library="primefaces" name="jquery/jquery.js"
 	target="head" />
+<script
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBR3PcM4cz5r0TULxJuDBgF2xvLqLE73c"></script>
+<h:outputScript library="js" name="locationMap.js" target="head" />
+
 <h:body>
 	<div id="loading" class="oculto topcorner">
 		<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
