--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -8,6 +8,13 @@
 <h:head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="Cache-Control"
+		content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="CEV - Colección Entomológica Virtual" />
+	<meta name="author" content="smotavitam@ucentral.edu.co" />
 	<title>CEV :: Administración</title>
 	<meta
 		content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
