--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,9 +7,13 @@
 	<title>Colección Entomológica Virtual</title>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="Cache-Control"
+		content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="CEV - Colección Entomológica Virtual" />
+	<meta name="author" content="smotavitam@ucentral.edu.co" />
 	<link rel="icon" type="image/png"
 		href="images/utils/bug-silhouette-dark.png" />
 	<link href="bootstrap/css/bootstrap.css" type="text/css"
