--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -86,6 +86,10 @@
 
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"
 		style="background-color: #ffffff00; border-color: #ffffff00">
+		<div class="main-tittle-hover">
+			<div class="dummy-child"></div>
+			<div class="titleText">COLECCIÓN ENTOMOLÓGICA VIRTUAL</div>
+		</div>
 		<div class="main-tittle"></div>
 	</nav>
 
